edit profile api completed

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -122,5 +122,6 @@
     "otp_has_been_sent_on_your_email": "OTP has been sent on your email",
     "reset_password_successfully": "Reset Password Successfully",
     "signup_successfully": "Sign Up Successfully",
-    "enter_verification_code": "Enter the verification code we just sent you on"
+    "enter_verification_code": "Enter the verification code we just sent you on",
+    "please_enter_phone_number":"Please enter phone number"
 }
