--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -1,5 +1,5 @@
 {
-    "login": "Acceso",
+    "login": "Iniciar Sesión",
     "dont_have_an_account": "¿No tienes una cuenta? ",
     "register": "Registro",
     "lets": "Vamos ",
@@ -9,10 +9,10 @@
     "forgot_password": "¿Has olvidado tu contraseña?",
     "or": "O",
     "create_an_account": "Crear una cuenta",
-    "next": "Próxima",
+    "next": "Siguiente",
     "full_name": "Nombre completo",
-    "confirm_password": "confirmar Contraseña",
-    "agree_to_terms_conditions": "Acepte los Términos y Condiciones",
+    "confirm_password": "Confirmar contraseña",
+    "agree_to_terms_conditions": "Acepta los Términos y Condiciones",
     "forgot": "Olvidó ",
     "reset": "Reiniciar ",
     "continue": "Continuar",
@@ -20,9 +20,9 @@
     "login_insted": "Iniciar sesión en su lugar",
     "set_password": "Establecer contraseña",
     "add": "Agregar ",
-    "your": "su ",
+    "your": "tu ",
     "location": "Ubicación",
-    "you_can_edit_this_later_on_your_account_setting": "Puede editar esto más tarde en la configuración de su cuenta.",
+    "you_can_edit_this_later_on_your_account_setting": "Puedes editar esto más tarde en la configuración de tu cuenta.",
     "select_on_map": "seleccionar en el mapa",
     "location_detail": "Detalle de ubicación",
     "select_your_location_to_find_relevant_properties_near_you": "Seleccione su ubicación para encontrar propiedades relevantes cerca de usted.",
@@ -39,7 +39,7 @@
     "successfully": "exitosamente",
     "created": "creada",
     "finish": "Finalizar",
-    "search_here": "Busca aquí",
+    "search_here": "Buscar...",
     "nearby_listing": "Listados cercanos",
     "available": "Disponible",
     "bathrooms": "baños",
@@ -58,13 +58,13 @@
     "from_your_location": "desde tu ubicación",
     "write_comment": "Escribe un comentario..",
     "search_results": "Resultados de la búsqueda",
-    "found": "Encontrada",
-    "estates": "fincas",
+    "found": "Encontradas",
+    "estates": "propiedades",
     "search": "Buscar",
     "not_found": "extraviado",
-    "search_not_found_error": "Lo sentimos, no podemos encontrar la propiedad que estás buscando. ¿Quizás,\n un pequeño error ortográfico?",
+    "search_not_found_error": "Lo sentimos, no podemos encontrar la propiedad que estás buscando.\n¿Quizás, un pequeño error ortográfico?",
     "filter": "Filtrar",
-    "price_range": "Gama de precios",
+    "price_range": "Rango de precio",
     "amenities": "Comodidades",
     "property_size": "Tamaño de la propiedad",
     "select": "Seleccionar",
@@ -122,5 +122,6 @@
     "otp_has_been_sent_on_your_email": "Se ha enviado un OTP a tu correo electrónico",
     "reset_password_successfully": "Restablecer contraseña exitosamente",
     "signup_successfully": "Registro exitoso",
-    "enter_verification_code": "Ingresa el código de verificación que te acabamos de enviar"
+    "enter_verification_code": "Ingresa el código de verificación que te acabamos de enviar",
+    "please_enter_phone_number":"Por favor ingrese el número de teléfono"
 }
