--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -111,13 +111,13 @@
     "please_enter_your_password": "Please enter your password",
     "please_enter_your_otp": "Please enter your OTP",
     "please_enter_your_confirm_password": "Please enter your confirm password",
-    "password_must_be_at_least_12_characters_long": "Password must be at least 12-40 characters long,\ninclude 1 number, 1 uppercase letter, 1 lowercase letter, and 1 special character.",
+    "password_must_be_at_least_12_characters_long": "Password must be 12-40 characters long,\nat least 1 number,1 special character,1 uppercase letter, 1 lowercase letter.",
     "new_password_and_confirm_password_does_not_match": "New password and confirm password does not match",
     "please_enter_your_full_name": "Please enter your full name",
     "password_and_confirm_password_does_not_match": "Password and confirm password does not match",
     "please_agree_to_all_terms_and_condition": "Please agree to all terms and condition",
     "profile_updated_successfully": "Profile Updated Successfully",
-    "login_successfully": "Login Successfully",
+    "login_successfully": "Login Successfull",
     "otp_verify_successfully": "Otp Verify Successfully",
     "otp_has_been_sent_on_your_email": "OTP has been sent on your email",
     "reset_password_successfully": "Reset Password Successfully",
@@ -135,5 +135,5 @@
     "please_select_property_type": "Please select property type",
     "please_add_property_budget": "Please add property budget",
     "login_intro_text": "Your smart real estate hub",
-    "login_intro_subtext":"Log in to Habitake to explore properties, create renovation variants, and connect with professionals."
+    "login_intro_subtext": "Log in to Habitake to explore properties, create renovation variants, and connect with professionals."
 }
